crates/fig-lexer/tests/snapshots/integration_tests__literals__strings_interpolated.snap
---
source: crates/fig-lexer/tests/integration_tests.rs
expression: tokens
---
- Func
- Ident: strings
- LParen
- RParen
- Arrow
- Ident: ok
- Newline
- Indent
- Let
- Ident: name
- Eq
- StringLiteral: World
- Newline
- Let
- Ident: x
- Eq
- IntegerLiteral:
    base: Decimal
    digits: "42"
    suffix: ~
- Newline
- Pass
- Newline
- Dedent
